# labtool

./: .gitignore  LICENSE  README.md  __init__.py  possible_setup.cfg  pyproject.toml  requirements.txt  todo.txt
labtool/: __init__.py  classes.py  functions.py  monkeypatch_uncertainties.py
labtool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: classes.py  functions.py  monkeypatch_uncertainties.py
tests/: _profiling_student.snakeviz  interpolate_student.py  ste_fro_unc.py  test_Elias.py  test_Elias_2.py  test_Max.py  test_classes.py  test_decimal.py  test_general.py  test_repr.py  test_table_1.py  test_time.py  tracefuncs.py
tests/data/: 2.csv  4.csv
tests/data/3/: 0_ref.csv  1_meth.csv  3_meth.csv  5_meth.csv  6_ref.csv
tests/saves/: fit.csv  interp.csv  series.csv
tests/tables.latex/: pm_siunitx.tex  table2.tex  table3.tex  table4.tex  table5.tex  tests_with_tables.aux  tests_with_tables.fdb_latexmk  tests_with_tables.fls  tests_with_tables.tex
